--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  get: ^4.6.1
+  health: ^10.2.0
 
 
   # The following adds the Cupertino Icons font to your application.
