--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   get: ^4.6.1
   health: ^10.2.0
+  permission_handler: ^11.3.1
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -61,8 +62,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-assets:
-  - assets/images/splash_page_star.png
+  assets:
+    - images/splash_page_star.png
+    - images/home_page_box.png
     
 
   # An image asset can refer to one or more resolution-specific "variants", see
