--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   get: ^4.6.1
   health: ^10.2.0
   permission_handler: ^11.3.1
+  connectivity_plus: ^2.3.5
 
 
   # The following adds the Cupertino Icons font to your application.
