--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   health: ^10.2.0
   permission_handler: ^11.3.1
   connectivity_plus: ^2.3.5
+  intl: 0.19.0
+  shared_preferences: ^2.2.3
 
 
   # The following adds the Cupertino Icons font to your application.
