--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   connectivity_plus: ^2.3.5
   intl: 0.19.0
   shared_preferences: ^2.2.3
+  
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -68,6 +69,7 @@ flutter:
   assets:
     - images/splash_page_star.png
     - images/home_page_box.png
+    - images/survey_page_img.png
     
 
   # An image asset can refer to one or more resolution-specific "variants", see
