--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   connectivity_plus: ^2.3.5
   intl: 0.19.0
   shared_preferences: ^2.2.3
+  flutter_health_connect: ^1.2.3
+  webview_flutter: ^4.8.0
+  webview_flutter_android: ^3.16.4
   
 
 
