init. 바텀네비게이션 오류 수정 및 기초 단계 수정 완료

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_health_connect: ^1.2.3
   webview_flutter: ^4.8.0
   webview_flutter_android: ^3.16.4
+  device_info_plus: ^9.0.2
   
 
 
