--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   webview_flutter: ^4.8.0
   webview_flutter_android: ^3.16.4
   device_info_plus: ^9.0.2
+  fl_chart: ^0.68.0
   
 
 
